update versionUp